@startuml

title __COMMENT's Class Diagram__\n

  namespace Community.Comment {
    class Community.Comment.Comment {
        + randomATA : String
        + s : ArrayList<String>
        ~ mBtCommentactivityReturn : ImageView
        - mBtCommentactivitySave : Button
        - mBtCommentactivitySeeMap : Button
        - mEtCommentactivityComment : EditText
        + lastPlan()
        + onClick()
        # onCreate()
        - initView()
    }
  }
  

  namespace Community.Comment {
    class Community.Comment.Delete {
        ~ deleteList : ListView
        ~ list : ArrayList<commentFormat>
        + onClick()
        # onCreate()
    }
  }
  

  namespace Community.Comment {
    class Community.Comment.Edit {
        ~ editList : ListView
        ~ list : ArrayList<commentFormat>
        + onClick()
        # onCreate()
    }
  }
  

  namespace Community.Comment {
    class Community.Comment.Edit_main {
        + randomATA : String
        + s : ArrayList<String>
        ~ backButton : ImageView
        - mBtCommentactivitySave : Button
        - mBtCommentactivitySeeMap : Button
        - mEtCommentactivityComment : EditText
        - mEtCommentactivityPlaces : EditText
        + onClick()
        # onCreate()
        - initView()
    }
  }
  

  namespace Community.Comment {
    class Community.Comment.show {
        ~ backButton : ImageView
        - btn1_delete : Button
        - btn2_edit : Button
        + onClick()
        # onCreate()
        - initView()
    }
  }
  

  Community.Comment.Comment .up.|> android.view.View.OnClickListener
  Community.Comment.Comment -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Comment.Comment o-- Community.Common.commentFormat : mlastPlan
  Community.Comment.Comment o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Community.Comment.Delete -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Comment.Delete o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Community.Comment.Edit -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Comment.Edit o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Community.Comment.Edit_main .up.|> android.view.View.OnClickListener
  Community.Comment.Edit_main -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Comment.Edit_main o-- Community.Common.commentFormat : mPlan
  Community.Comment.Edit_main o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment
  Community.Comment.show .up.|> android.view.View.OnClickListener
  Community.Comment.show -up-|> androidx.appcompat.app.AppCompatActivity
  Community.Comment.show o-- Community.Common.DBOpenHelperComment : mDBOpenHelperComment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
